# medisure-ai-backend

./: .gitignore  Dockerfile  README.md  aetnaleap_tabular_example.txt  app.yaml  appeal_generation.txt  main.py  pyproject.toml  requirements.txt  vision.py
PageRank_summarizer/: respose.txt  summary.py
backend/: settings.py
deeplearning_text_summarization/: summarize_documents.py
resources/: Appeal_letter_generation_prompts.txt  Generation.txt  Questions.txt  denial_letter.docx  denial_letter.txt  denial_letter_caseB.docx  denied_letter.txt  ~$nial_letter.docx
scripts/: gpt.py  vision.py
tfidf_Summarization/: tfidf_summarization.py
